0.87

* Added Lifestream RSS feed (available via /feed/lifestream/ or /feed/?feed=lifestream).
* Fixed an issue with the path to the daily digest template on some hosts.

0.86

* Changed upgrade process to silently ignore alter complications.
* Updated homepage (we've moved the WP project completely to iBegin).
* Added iTunes plugin.
* $key is now passed to the yield() function.
* Fixed an issue where the key was being overwritten on generic feeds.
* You can now specify an option requirement as `null` to have it hidden.

0.85c

* Fixed an issue with YouTubeFeed.
* Deleting a feed now deletes related errors.

0.85

* YouTubeFeed now handles favorites (thanks futtta).
* Default options for `lifestream_sidebar_widget()` have been changed.
* Support for a `local_feeds.inc.php` file has been added.
* Added Spanish localization from Guillermo López.

0.84c

* Added Xbox Live feed.

0.84b

* Added Steam feed (http://www.steampowered.com/).

0.84

* Added `feed_types` argument to lifestream output functions.
* Added an example in readme.txt to fetch latest Twitter status in a template.
* Added `lifestream_twitter_status()` shortcut.
* Added `lifestream_facebook_status()` shortcut.

0.83

* There is now an option to have the grouped events details shown by default.
* Daily Digest will no longer show date headers, and has been moved to a new template (daily-digest.inc.php)
* Changed some of the CSS to be a bit more relaxed and easier for custom themes.

0.82

* Twitter feeds will now import full history on creation.
* Tweaked feed adding to be more intuitive and informational.

0.81

* Added "hide_labels" option for lifestream output.
* Added "break_groups" option for lifestream_get_events.
* More CSS tweaks.

0.80

* Sidebar widgets are here!
* Changed include paths to be absolute.
* Tweaked widget CSS to solve an issue with the default WordPress theme.

0.78c

* Added SlideShare feed.
* Added Blip.tv feed.
* Updated Danish localization from René Clausen Nielsen.